--- a/src/app/_shared/modal/edit-screen/edit-screen.component.html
+++ b/src/app/_shared/modal/edit-screen/edit-screen.component.html
@@ -1,6 +1,6 @@
 <div #editScreenForm="ngForm" ngForm>
   <div class="modal-header">
-    <h4 class="modal-title">Edit Screen</h4>
+    <h4 class="modal-title">{{_editScreenData.id?'Edit':'Add'}} Screen</h4>
   </div>
   <div class="modal-body">
     <div class="form-group mb-3">
