--- a/src/app/_shared/modal/edit-dashboard/edit-dashboard.component.html
+++ b/src/app/_shared/modal/edit-dashboard/edit-dashboard.component.html
@@ -1,6 +1,6 @@
 <div #editDashboardForm="ngForm" ngForm>
   <div class="modal-header">
-    <h4 class="modal-title">Edit Dashboard</h4>
+    <h4 class="modal-title">{{_editDashboardData.id?'Edit':'Add'}} Dashboard</h4>
   </div>
   <div class="modal-body">
     <div class="form-group mb-3">
