--- a/src/app/_shared/modal/edit-mailer/edit-mailer.component.html
+++ b/src/app/_shared/modal/edit-mailer/edit-mailer.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title">Add Mailer</h4>
+  <h4 class="modal-title">{{_editMailerData.id?'Edit':'Add'}} Mailer</h4>
 </div>
 <div class="modal-body fix-gutter" #mailerEditForm="ngForm" ngForm>
   <div class="form-group mb-3">
