--- a/src/app/_shared/modal/edit-role/edit-role.component.html
+++ b/src/app/_shared/modal/edit-role/edit-role.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title">Add Group</h4>
+  <h4 class="modal-title">{{_editGroupData.id?'Edit':'Add'}} Group</h4>
 </div>
 <div class="modal-body fix-gutter" #groupEditForm="ngForm" ngForm>
   <div class="form-group mb-3">
