--- a/src/app/design/editor/endpoint-editor/endpoint-editor.component.html
+++ b/src/app/design/editor/endpoint-editor/endpoint-editor.component.html
@@ -274,7 +274,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
 </ng-template>
 <ng-template #editEndpointTpl let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title">Add Endpoint</h4>
+    <h4 class="modal-title">{{editEndpointData.id?'Edit':'Add'}} Endpoint</h4>
   </div>
   <div class="modal-body fix-gutter" #endpointEditForm="ngForm" ngForm>
     <div class="form-group mb-3">
