--- a/src/app/design/editor/krypta-editor/krypta-editor.component.html
+++ b/src/app/design/editor/krypta-editor/krypta-editor.component.html
@@ -144,7 +144,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
                     }
                   </div>
                   <div class="d-flex flex-row">
-                    @if (krypta && (krypta.email?.indexOf(user.email)>-1) && (krypta.app?.id == appId)) {
+                    @if (krypta && (krypta.email?.indexOf(user.email)>-1) && (krypta.appId == appId)) {
                       <button type="button" class="btn border border-2 btn-outline-secondary btn-sm"
                         title="Edit wallet info"
                         (click)="editWallet(editWalletTpl,krypta,false)" [class.disabled]="offline">
@@ -424,7 +424,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
 
 <ng-template #editWalletTpl let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title">Add Wallet Info</h4>
+    <h4 class="modal-title">{{editWalletData.id?'Edit':'Add'}} Wallet Info</h4>
   </div>
   <div class="modal-body fix-gutter" #kryptaEditForm="ngForm" ngForm>
     <div class="form-group mb-3">
@@ -458,7 +458,13 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
       <div class="form-group mb-3">
         <label class="form-label">Private Key *</label>
         <input type="text" class="form-control" [(ngModel)]="editWalletData.privateKey" name="privateKey"
-          placeholder="Private Key" required>
+          placeholder="Private Key" list="pkSecretList" autocomplete="off" required>
+        <datalist id="pkSecretList">
+          @for(secret of secretList; track $index) {
+            @let secretKey = '{{_secret.'+secret.key+'}}';
+            <option value="{{secretKey}}">Secret: {{secret.key}}</option>
+          }
+        </datalist>
       </div>
       <div class="form-group mb-3 mt-1">
         <label class="form-label">Smart Contract *</label>
