Added new icon, fas-key
Added key icon on field that support Secret

Added support for Secret in lookup and endpoint url

Modal dialog title improvement: Show 'Add' when add, 'Edit' when edit

Endpoint/lookup url placeholder prompt when run, filter out key containing '_secret'

--- a/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
+++ b/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
@@ -174,7 +174,7 @@
         }
       </div>
       <div class="form-group mb-3">
-        <label class="form-label">RESTful Endpoint *</label>
+        <label class="form-label">RESTful Endpoint * <fa-icon [icon]="['fas','key']" [fixedWidth]="true" title="Support Secret placeholder"></fa-icon></label>
         <input type="text" class="form-control" [(ngModel)]="_lookup.endpoint"
           #endpoint="ngModel" name="endpoint" required>
         @if (endpoint?.invalid) {
@@ -311,7 +311,7 @@
             </div>
             <div class="col-sm-6">
               <div class="form-group mb-3">
-                <label class="form-label">Client Secret *</label>
+                <label class="form-label">Client Secret * <fa-icon [icon]="['fas','key']" [fixedWidth]="true" title="Support Secret placeholder"></fa-icon></label>
                 <input type="text" class="form-control"
                   [(ngModel)]="_lookup.clientSecret" name="clientSecret" list="clientSecretList"
                   placeholder="ie: 87897jhjd-9182731yye" autocomplete="off" required>
