--- a/src/app/design/editor/lambda-editor/lambda-editor.component.html
+++ b/src/app/design/editor/lambda-editor/lambda-editor.component.html
@@ -81,7 +81,7 @@
       
       <a class="pointer text-truncate"  [routerLink]="['/design',appId,'lambda']" [queryParams]="{key:true}"
        routerLinkActive="active">
-          <fa-icon class="float-start" [icon]="['fas','lock']" [fixedWidth]="true"></fa-icon>
+          <fa-icon class="float-start" [icon]="['fas','key']" [fixedWidth]="true"></fa-icon>
           <div class="list-group-item-heading ms-4">
               Manage Secrets
           </div>
