--- a/src/app/design/editor/cogna-editor/cogna-editor.component.html
+++ b/src/app/design/editor/cogna-editor/cogna-editor.component.html
@@ -1040,7 +1040,6 @@
   <div class="modal-header">
     <h4 class="modal-title">{{editCognaData.id?'Edit':'Add'}} Cogna</h4>
   </div>
-
   <div ngbAccordion #cognaEditForm="ngForm" ngForm class="accordion-flush fix-gutter" [closeOthers]="true"
     [destroyOnHide]="false">
     <div ngbAccordionItem [collapsed]="false">
@@ -1291,7 +1290,7 @@
             </div>
             }@else {
             <div class="form-group mb-3">
-              <label class="form-label">Model API Key/Access Token</label>
+              <label class="form-label">Model API Key/Access Token <fa-icon [icon]="['fas','key']" [fixedWidth]="true" title="Support Secret placeholder"></fa-icon></label>
               <input type="text" class="form-control form-control-sm" [(ngModel)]="editCognaData.embedModelApiKey"
                 list="embedSecretList"
                 #embedModelApiKey="ngModel" autocomplete="off" name="embedModelApiKey" required>
@@ -1583,7 +1582,7 @@
             </div>
             } @else {
             <div class="form-group mb-3">
-              <label class="form-label">Model API Key/Access Token *</label>
+              <label class="form-label">Model API Key/Access Token * <fa-icon [icon]="['fas','key']" [fixedWidth]="true" title="Support Secret placeholder"></fa-icon></label>
               <input type="text" class="form-control form-control-sm"
                 [ngModel]="editCognaData && editCognaData.inferModelApiKey"
                 (ngModelChange)="editCognaData && (editCognaData.inferModelApiKey = $event)" #inferModelApiKey="ngModel"
@@ -2589,16 +2588,11 @@
           </tbody>
         </table>
       </div>
-
-
-      <!-- <div class="small" >{{item.metadata|json}}</div> -->
       }
 
     </div>
     }
   </div>
-  <!-- </div> -->
-  <!-- </div> -->
   <div class="modal-footer justify-content-between">
     <button type="button" class="btn btn-round" (click)="d()">Close</button>
   </div>
