--- a/src/app/design/editor/krypta-editor/krypta-editor.component.html
+++ b/src/app/design/editor/krypta-editor/krypta-editor.component.html
@@ -456,7 +456,7 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
           placeholder="ie: 1337" required>
       </div>
       <div class="form-group mb-3">
-        <label class="form-label">Private Key *</label>
+        <label class="form-label">Private Key * <fa-icon [icon]="['fas','key']" [fixedWidth]="true" title="Support Secret placeholder"></fa-icon></label>
         <input type="text" class="form-control" [(ngModel)]="editWalletData.privateKey" name="privateKey"
           placeholder="Private Key" list="pkSecretList" autocomplete="off" required>
         <datalist id="pkSecretList">
