Remove horizontal padding on code highlight (x-for, x-if, etc)
Improve/fool-proof import from excel

--- a/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
+++ b/src/app/_shared/modal/edit-lookup/edit-lookup.component.html
@@ -152,7 +152,7 @@
     }
     @if (_lookup?.sourceType == 'rest') {
       <div class="form-group mb-3">
-        <label class="form-label">Request Method Type</label>
+        <label class="form-label">Request Method Type *</label>
         <div>
           <div class="btn-group btn-group-toggle" role="group">
             <input type="radio" name="method" #method="ngModel"
