--- a/src/app/_shared/component/ng-cm/ng-cm.component.scss
+++ b/src/app/_shared/component/ng-cm/ng-cm.component.scss
@@ -81,14 +81,14 @@
     .cm-tag-x-if,.cm-tag-x-else-if,.cm-tag-x-else,.cm-tag-x-foreach,.cm-tag-x-for{
         // background-color: #e2c3ff61 !important;
         font-weight: 500;
-        padding: 0px 4px;
+        padding: 0px;
         border-radius: 4px;
         font-style: italic;
     }
     .cm-attr-x-if,.cm-attr-x-foreach,.cm-attr-x-for{
         // background-color: #91dcff61 !important;
         font-weight: 500;
-        padding: 0px 4px;
+        padding: 0px;
         border-radius: 4px;
         font-style: italic;
     }
@@ -105,7 +105,7 @@
     .cm-tag-x-markdown{
         // background-color: #97ffb361 !important;
         font-weight: bold;
-        padding: 0px 4px;
+        padding: 0px;
         border-radius: 4px;
         font-style: italic;
     }
