--- a/src/app/design/editor/ui-editor/ui-editor.component.html
+++ b/src/app/design/editor/ui-editor/ui-editor.component.html
@@ -267,81 +267,128 @@
                     <li>Use <code>_:email</code> for entry email, <code>_:current_status</code> for entry status</li>
                     <li>Email will be defaulted to uploaders email if not specified in excel</li>
                 </ul>
-                <div class="form-group mt-2">
-                    <label>Options</label>
-                    <div class="form-check form-switch disabled">
-                        <input type="checkbox" class="form-check-input" id="createField" checked name="createField">
-                        <label class="form-check-label" for="createField">Create form</label>
+                @if(!excelImportIsNext){
+                  <div class="form-group mt-2">
+                      <label>Options</label>
+                      <div class="form-check form-switch disabled">
+                          <input type="checkbox" class="form-check-input" id="createField" checked name="createField">
+                          <label class="form-check-label" for="createField">Create form</label>
+                      </div>
+                      <div class="form-check form-switch mt-1">
+                          <input type="checkbox" class="form-check-input" id="createDataset" [(ngModel)]="createDataset"
+                              name="createDataset">
+                          <label class="form-check-label" for="createDataset">Create dataset automatically</label>
+                      </div>
+                      <div class="form-check form-switch mt-1">
+                          <input type="checkbox" class="form-check-input" id="createDashboard"
+                              [(ngModel)]="createDashboard" name="createDashboard">
+                          <label class="form-check-label" for="createDashboard">Create dashboard automatically</label>
+                      </div>
+                      <div class="form-check form-switch mt-1">
+                          <input type="checkbox" class="form-check-input" id="importToLive" [(ngModel)]="importToLive"
+                              name="importToLive">
+                          <label class="form-check-label" for="importToLive">Import to Live data</label>
+                      </div>
+                  </div>
+                  <div class="form-group mb-3 mt-3 d-flex">
+                    <button type="button" class="form-control mb-2" style="width:unset" (click)="excelImportIsNext=true">Next
+                      <fa-icon [icon]="['fas','arrow-right']" [fixedWidth]="true"></fa-icon>
+                    </button>
+                  </div>
+                }
+                @if(excelImportIsNext){
+                  <div class="form-group mb-3 mt-3">
+                    <button type="button" class="form-control me-auto mb-2" style="width:unset" (click)="excelImportIsNext=false">
+                      <fa-icon [icon]="['fas','arrow-left']" [fixedWidth]="true"></fa-icon> Back
+                    </button>
+                    <div class="my-3 small">
+                      <div class="text-success">
+                        <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
+                        Create form automatically</div>
+                      @if (createDataset){
+                        
+                        <div class="text-success">
+                          <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
+                          Create dataset automatically</div>
+                      }@else {
+                        
+                        <div class="text-danger">
+                          <fa-icon [icon]="['fas','times']" [fixedWidth]="true"></fa-icon>
+                          Do not create dataset automatically</div>
+                      }
+                      @if (createDashboard){
+                        <div class="text-success">
+                          <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
+                          Create dashboard automatically</div>
+
+                      }@else {
+                        <div class="text-danger">
+                          <fa-icon [icon]="['fas','times']" [fixedWidth]="true"></fa-icon>
+                          Do not create dashboard automatically</div>
+                      }
+                      @if (importToLive){
+                        <div class="text-success">
+                          <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon>
+                          Import to Live data</div>
+                      }@else {
+                        <div class="text-danger">
+                          <fa-icon [icon]="['fas','times']" [fixedWidth]="true"></fa-icon>
+                          <strong> Do not</strong> import to Live data</div>
+                      }
                     </div>
-                    <div class="form-check form-switch mt-1">
-                        <input type="checkbox" class="form-check-input" id="createDataset" [(ngModel)]="createDataset"
-                            name="createDataset">
-                        <label class="form-check-label" for="createDataset">Create dataset automatically</label>
-                    </div>
-                    <div class="form-check form-switch mt-1">
-                        <input type="checkbox" class="form-check-input" id="createDashboard"
-                            [(ngModel)]="createDashboard" name="createDashboard">
-                        <label class="form-check-label" for="createDashboard">Create dashboard automatically</label>
-                    </div>
-                    <div class="form-check form-switch mt-1">
-                        <input type="checkbox" class="form-check-input" id="importToLive" [(ngModel)]="importToLive"
-                            name="importToLive">
-                        <label class="form-check-label" for="importToLive">Import to Live data</label>
-                    </div>
-                </div>
-                <div class="form-group mb-3 mt-3">
                     @if (!importExcelData) {
                     <label class="form-label">
                         <input type="file" [hidden]="true"
                             (change)="uploadExcel($event, createDataset, createDashboard, importToLive)" name="file"
                             required accept=".xlsx" />
                         @if (!importLoading) {
-                        <div class="form-control" style="background: white">
+                        <div class="btn btn-primary">
                             <fa-icon [icon]="['fas','upload']"></fa-icon>
                             Browse and Import
                         </div>
                         }
                         @if (importLoading) {
-                        <div class="form-control" style="background: white">
+                        <div class="btn btn-primary">
                             Importing...
                         </div>
                         }
                     </label>
                     }
                     @if (importExcelData) {
-                    <div class="mx-n3">
-                        @if (importExcelData.logs && importExcelData.logs.length>0) {
-                        <table class="table table-bordered table-sm table-borderless">
-                            <thead>
-                                <tr>
-                                    <th>Message</th>
-                                    <th>Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @for (l of importExcelData.logs; track $index) {
-                                <tr class="text-white bg-{{l[1]}}">
-                                    <td>{{l[0]}}</td>
-                                    <td>{{l[2]}}</td>
-                                </tr>
-                                }
-                            </tbody>
-                        </table>
-                        }
-                    </div>
-                    @if (importExcelData.success) {
-                    <div class="alert alert-success">
-                        <h5>Data successfully imported</h5>
-                    </div>
+                      <div class="mx-n3">
+                          @if (importExcelData.logs && importExcelData.logs.length>0) {
+                          <table class="table table-bordered table-sm table-borderless">
+                              <thead>
+                                  <tr>
+                                      <th>Message</th>
+                                      <th>Status</th>
+                                  </tr>
+                              </thead>
+                              <tbody>
+                                  @for (l of importExcelData.logs; track $index) {
+                                  <tr class="text-white bg-{{l[1]}}">
+                                      <td>{{l[0]}}</td>
+                                      <td>{{l[2]}}</td>
+                                  </tr>
+                                  }
+                              </tbody>
+                          </table>
+                          }
+                      </div>
+                      @if (importExcelData.success) {
+                      <div class="alert alert-success">
+                          <h5>Data successfully imported</h5>
+                      </div>
+                      }
+                      @if (!importExcelData.success) {
+                      <div class="alert alert-success">
+                          <h5>Data import failed</h5>
+                          Message: {{importExcelData.message}}
+                      </div>
+                      }
                     }
-                    @if (!importExcelData.success) {
-                    <div class="alert alert-success">
-                        <h5>Data import failed</h5>
-                        Message: {{importExcelData.message}}
-                    </div>
-                    }
-                    }
-                </div>
+                  </div>
+                }
             </div>
         </div>
         <div class="modal-footer justify-content-between">
